# Optical-flow-CUDA

./: .gitignore  CMakeLists.txt  README.md
cmake/: platform.cmake
config/: camera.yaml  camera_jetson.yaml  camera_ubuntu.yaml
docs/: setup_ubuntu.md
scripts/: build.sh  build_opencv.sh  install_deps.sh  list_cameras.sh
scripts/common/: build.sh  build_core.sh
scripts/jetson/: benchmark.sh  build.sh  run.sh  set_power_mode.sh
scripts/linux/: build.sh
scripts/ubuntu/: build.sh  run.sh
scripts/windows/: build.ps1  install_deps.ps1
src/: logger.cpp  logger.h  main.cpp
src/camera/: CameraCapture.cpp  CameraCapture.h
src/cuda/: lucas_kanade.cu  lucas_kanade.h
src/filters/: Filter.h  GrayscaleFilter.h
test/: test_camera.py  test_grayscale.cpp
